<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_screen_background"
    android:orientation="vertical"
    android:padding="@dimen/distance_25dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="Location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/updatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/item_main_screen_updated_at"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14sp" />

                <Space
                    android:layout_width="@dimen/distance_10dp"
                    android:layout_height="@dimen/distance_10dp" />

                <TextView
                    android:id="@+id/updatedAtNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14sp"
                    tools:text="11.01.2001 00:00:00 PM" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressContainer"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_50sp"
                    tools:text="24 °C" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tempMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_main_screen_min"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tempMinNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text=" 21°C" />

                <Space
                    android:layout_width="@dimen/distance_50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tempMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/item_main_screen_max" />

                <TextView
                    android:id="@+id/tempMaxNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Max 23°C" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/distance_8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_main_screen_sunrise"
                        app:tint="#FFF">


                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/distance_5dp">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_main_screen_sunrise"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp"
                        tools:text="5:30 am" />

                </LinearLayout>

                <Space
                    android:layout_width="@dimen/distance_10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/distance_8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_main_screen_sunset"
                        app:tint="#FFF">


                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/distance_5dp">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_main_screen_sunset"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp"
                        tools:text="5:30 am" />

                </LinearLayout>

                <Space
                    android:layout_width="@dimen/distance_10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/distance_8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_main_screen_wind"
                        app:tint="#FFF">


                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/distance_5dp">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_main_screen_wind"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp"
                        tools:text="20 miles/hour" />

                </LinearLayout>

                <Space
                    android:layout_width="@dimen/distance_10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/distance_10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/distance_8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_main_screen_pressure"
                        app:tint="#FFF">


                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/distance_5dp">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_main_screen_pressure"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp"
                        tools:text="52 hPa" />

                </LinearLayout>

                <Space
                    android:layout_width="@dimen/distance_10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/distance_8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_main_screen_humidity"
                        app:tint="#FFF">


                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/distance_5dp">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_main_screen_humidity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp"
                        tools:text="57 %" />

                </LinearLayout>

                <Space
                    android:layout_width="@dimen/distance_10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/distance_8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_main_screen_clouds"
                        app:tint="#FFF">


                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/distance_5dp">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_main_screen_clouds"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/clouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp"
                        tools:text="0.70 %" />

                </LinearLayout>

                <Space
                    android:layout_width="@dimen/distance_10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/distance_10dp" />


        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBarMainScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/showMessageErrorOnMainScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:text="Something went wrong" />
</RelativeLayout>